log/build_2024-12-04_19-07-37/rms_package/stderr.log
  File "/home/marcel/studies/2_sem_mgr/RPE_lab/EX5/ros2_ws/install/rms_package/lib/python3.10/site-packages/rms_package/component_error_handler.py", line 32
    cli = self.create_client(Empty, format('%d_error_handler', sensor)
                            ^
SyntaxError: '(' was never closed

